cm4all-myproxy (0.2) unstable; urgency=low

  * allow passing SocketAddress to mysql_cluster()
  * lua: support PostgreSQL arrays
  * lua: add bindings for libsodium Sealed boxes

 --   

cm4all-myproxy (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Apr 2023 15:39:11 +0200