@@ -1,6 +1,7 @@
 cm4all-myproxy (0.2) unstable; urgency=low
 
   * allow passing SocketAddress to mysql_cluster()
+  * allow specifying the password SHA1 in on_handshake_response()
   * lua: support PostgreSQL arrays
   * lua: add bindings for libsodium Sealed boxes
 
